[package]
name = "sdcard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
embedded-hal = "0.2.7"
embedded-storage = "0.3.0"
snafu = "0.7.1"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
